--- a/PortfolioSite.css
+++ b/PortfolioSite.css
@@ -23,7 +23,7 @@ h1 {
 h3 {
     margin: auto;
     text-align: center;
-    font-size: 5vw;
+    font-size: 2em;
     padding: 2%;
     max-width: 100%;
 }
@@ -46,6 +46,6 @@ h3 {
     max-width: 100%;
 }
 
-row2 {
+.row {
     text-align: center;
 }
